2011-06-04  Ira Rosen  <ira.rosen@linaro.org>

	PR tree-optimization/49038
	* gcc.dg/vect/vect-strided-u8-i8-gap4-unknown.c: New test.
	* gcc.dg/vect/pr49038.c: New test.

2011-06-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49276
	* g++.dg/cpp0x/lambda/lambda-mangle2.C: New test.

2011-06-02  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/49265
	* gfortran.dg/module_procedure_double_colon_1.f90: New test.
	* gfortran.dg/module_procedure_double_colon_2.f90: New test.

2011-06-02  Ira Rosen  <ira.rosen@linaro.org>

	PR tree-optimization/49093
	* gcc.dg/vect/pr49093.c: New test.

2011-05-31  Thomas Koenig  <tkoenig@gcc.gnu.org>

	Backport from trunk
	PR fortran/45786
	* gfortran.dg/operator_7.f90:  New test case.

2011-05-31  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-05-19  Richard Guenther  <rguenther@suse.de>

	PR middle-end/48985
	* gcc.dg/builtin-object-size-11.c: New testcase.

2011-05-31  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-05-11  Richard Guenther  <rguenther@suse.de>

	PR middle-end/48953
	* gcc.dg/torture/pr48953.c: New testcase.

2011-05-30  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49223
	* g++.dg/gomp/pr49223-1.C: New test.
	* g++.dg/gomp/pr49223-2.C: New test.

2011-05-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49218
	* gcc.c-torture/execute/pr49218.c: New testcase.

2011-05-29  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/reg-var-1.c: New test.

2011-05-29  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49217
	* gcc.dg/torture/pr49217.c: New testcase.

2011-05-27  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/lambda/lambda-template2.C: New.

	* g++.dg/cpp0x/enum18.C: New.

	* g++.dg/cpp0x/error6.C: New.

2011-05-27  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49165
	* g++.dg/eh/cond6.C: New test.

2011-05-27  Jason Merrill  <jason@redhat.com>

	* g++.dg/template/const5.C: New.

2011-05-26  Thomas Koenig  <tkoenig@gcc.gnu.org>
